# SpotMicro_SAJOGI

./: .gitignore  8servos.py  README.md  branchtest.txt  hi.txt  requirements.sh  returnInitial.py  servo_angleTest.py  todo.txt  twelve_servos.py
LCD/: setup_lcd_i2c.txt
ROS_based/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
ROS_based/ros-pca9685-board/: CMakeLists.txt
ROS_based/ros_sajogi_movement/: CMakeLists.txt  package.xml
ROS_based/ros_sajogi_movement/msg/: servo.msg
ROS_based/ros_sajogi_movement/src/: sajogi_move.cpp
ROS_melodic_pkg/: CMakeLists.txt  package.xml
ROS_melodic_pkg/Kinematics/: Kinematic.ipynb  KinematicMovements.ipynb  kinematics.py
cusomSTL/: lidarmount.stl  upperplate.stl
main/: foeward.py  input_devices.py  main.py  movement.py  returnInitial.py
main/Movements/: check_time.py  config.py  movement.py  onestep.py  returnInitial.py  sit.py  slow_increment.py  spot_initial_pos.py  spot_move_fwd_v1.py  spot_move_fwd_v2.py  spot_multithread_move.py
main/Sensor_and_others/: WT901C485.py  input_devices.py  ultrasonic.py
movement/: movement.py
ros-pca9685-board/: LICENSE
servo_tirals/: basicServo.c  compile.sh  pca9685_servo.py  servo_angleTest.py
servokit_main/: main.py  movement.py
something/: PCA9685_tutorial.py  initiation.py  servomove
spot_ws/src/ros_sajogi/: CMakeLists.txt
spot_ws/src/ros_sajogi/launch/: sajogi_lidar.launch
spot_ws/src/ros_sajogi/msg/: 12servo.msg  dir_spd.msg  indiv_servo.msg
spot_ws/src/ros_sajogi/src/: core.cpp  motorControl.cpp  sajogi_move.cpp
(+56 files in other folders)
