<?xml version="1.0"?>
<package format="2">
  <name>sajogi_movement</name>
  <version>0.0.0</version>
  <description>ROS Node to control Custom Spot Micro Robot</description>

  <maintainer email="pawpaw0427@gmail.com">MinjunChang</maintainer>

  <license>GPL-3.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>